cors teaching pushes

--- a/_notebooks/2023-12-20-CORSteaching.ipynb
+++ b/_notebooks/2023-12-20-CORSteaching.ipynb
@@ -127,6 +127,44 @@
     "## Some key reminders:\n",
     "- When working with an API on the backend, in the areas where you want to protect the data, don't forget to do `import org.springframework.web.bind.annotation.CrossOrigin;` and include `@CrossOrigin` before the actual code "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MVC and Nginx\n",
+    "\n",
+    "### MVC\n",
+    "\n",
+    "- MVC stands for ___ View Controller, and its purpose is to build user interfaces and web applications and divides the application into three interconnected components: Model, View, and Controller\n",
+    "\n",
+    "Model:\n",
+    "- The model is responsible for managing data and the logic and rules for manipulating the data\n",
+    "- It is ___ from the user interface and works with the View and Controller\n",
+    "\n",
+    "View: \n",
+    "- The view is the part that works and is responsible for receiving the user input and presenting the data to the user\n",
+    "- It receives ___ from the Model and sends the user input to the Controller\n",
+    "\n",
+    "Controller:\n",
+    "- The controller functions to update the Model and sends the updates to the View \n",
+    "- It makes and handles the decisions that the user makes, updating the Model and View to adapt to it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A great example of the MVC system would be the PersonAPI on the [spring_portfolio](https://github.com/nighthawkcoders/spring_portfolio/tree/master/src/main/java/com/nighthawk/spring_portfolio/mvc/person), where the `Person.java` is the Model, `PersonDetailsService.java` is the View, and the `PersonAPIController.java` is the controller"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MVC functions:\n",
+    "- MVC serves in order to make the code separated into different roles and parts allowing for it to be easily ___ and easily reusable. It also provides great extendability and makes it really easy to test the code since each part is essentially independent from each other."
+   ]
   }
  ],
  "metadata": {
