--- a/_notebooks/2023-12-20-CORSteaching.ipynb
+++ b/_notebooks/2023-12-20-CORSteaching.ipynb
@@ -162,8 +162,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MVC functions:\n",
+    "### MVC functions:\n",
     "- MVC serves in order to make the code separated into different roles and parts allowing for it to be easily ___ and easily reusable. It also provides great extendability and makes it really easy to test the code since each part is essentially independent from each other."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nginx\n",
+    "\n",
+    "Nginx is a web server and reverse proxy server that has a wide variety of functions that enable for better performance, security, and connections between a client and the server. Some its most important features include:\n",
+    "\n",
+    "1. Web Server \n",
+    " - Nginx is able to handle incoming HTTP and HTTP requests from the client side with high performance, and can enable for the the direct serving of ____ content to the client side\n",
+    " - This enables for really efficient delivery of static resources to the web applications\n",
+    "\n",
+    "2. Reverse Proxy \n",
+    " - Nginx is a reverse proxy server as well and what this means is it takes requests from the frontend and connects it with the backend server and takes the response from the server and sends it back to the frontend \n",
+    " - This serves to shield the backend from being exposed to the internet and also enables many frontend clients to ___ with the backend\n",
+    "\n",
+    "3. Balancing Loads\n",
+    " - Nginx also helps to distribute the incoming requests and traffic equally among the backend servers and as a result, prevents the backend from being overwhelmed\n",
+    " - As a result, this significantly helps the performance and the maintenance of the backend server and enables for efficient communications \n",
+    "\n",
+    "4. SSL/TLS Termination:\n",
+    " - Nginx also can __ and __ the incoming data, from the frontend, sending it to the backend server\n",
+    " - This functions as a way to both ensure secure communications and also serves as a process to make the backend focus on running ___ instead of attempting to understand the request"
    ]
   }
  ],
