--- a/_notebooks/2023-12-22-MCBlog.ipynb
+++ b/_notebooks/2023-12-22-MCBlog.ipynb
@@ -17,7 +17,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Score:"
+    "# Final Score:\n",
+    "![](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/2015MCScore.png)\n",
+    "\n",
+    "This score is worse than my score of 34/39 on the last test we had but I felt some improvements"
    ]
   },
   {
@@ -40,7 +43,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> As you can see in the image above, I did take the time to understand and get the tougher questions right but still got them worng so I need to improve on my accuracy, the time Im taking for each question is good progress though compared with the previous test which had only about half the questions above 1 minute but this time, I got at least like 4/5 of the questions above 1 minute so really good progress in that area"
+    "> As you can see in the image above, I did take the time to understand and get the tougher questions right but still got them worng so I need to improve on my accuracy, the time Im taking for each question is good progress though compared with the previous test which had only about half the questions above 1 minute but this time, I got at least like 4/5 of the questions above 1 minute so really good progress in that area\n",
+    "\n",
+    "Here are the topic comparisons from last test and this test, for most the part its the same but I improved in some areas and looks like I need to work more with 2D Arrays, it seems to be the topic that I am mostly struggling with:\n",
+    "\n",
+    "**2014 MC Concepts:**\n",
+    "![](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/ContentKnowledge2014.png)\n",
+    "\n",
+    "**2015 MC Concepts:**\n",
+    "![](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/ContentKnowledge.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Learnings \n",
+    "- Some things that I learned and improve from compared to the last college board MC was the recursion and inheritance topics, this was something that was coincidentally something that I taught in the student teaching and it kind of made me realize how much the student teachings actually help with mastering a concept and topic \n",
+    "- Another thing that I learned that helped me this test compared to the last test was that I used a scratch piece of paper to help formulate and plan out steps for different questions that I came across in the test. \n",
+    "- Another key learning that I took away from this test was the terminology and wording used by the college board tries ot trick you and purposefully tries to make you select the wrong answer and you need to take your time understanding and making sure to double check every question and answer choice and understand it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Some plans for Improving\n",
+    "- Both of these tests, I worked on individually and I am thinking about working with another student, especially someone who might be more experienced in coding and see how they process and understand the question and see if I could learn a thing or two from them and apply it for future tests. \n",
+    "- Also want to work more with 2D arrays and loops that include arrays since these are the questions that I am struggling thw most with and working with them might improve my understanding in these topics. \n",
+    "- I also want to maybe time myself next time and understand how I am doing in terms of time and using my time efficiently on the questions and optimizing the time that I take for each question."
    ]
   }
  ],
