--- a/_notebooks/2023-12-19-JWTLesson.ipynb
+++ b/_notebooks/2023-12-19-JWTLesson.ipynb
@@ -375,7 +375,7 @@
     "public class JwtGenerator {\n",
     "\n",
     "    public static void main(String[] args) {\n",
-    "        String secretKey = \"yourSecretKey\";\n",
+    "        String secretKey = \"yourSecretKey\"; // secret key to sign into JWT\n",
     "        String subject = \"userId123\";\n",
     "        long expirationTimeMillis = System.currentTimeMillis() + 3600000;\n",
     "\n",
@@ -385,15 +385,15 @@
     "    }\n",
     "\n",
     "    private static String buildJwt(String secretKey, String subject, long expirationTimeMillis) {\n",
-    "        String header = \"{\\\"alg\\\":\\\"HS256\\\",\\\"typ\\\":\\\"JWT\\\"}\";\n",
-    "        String payload = \"{\\\"sub\\\":\\\"\" + subject + \"\\\",\\\"iat\\\":\" + System.currentTimeMillis() / 1000 +\n",
+    "        String header = \"{\\\"alg\\\":\\\"HS256\\\",\\\"typ\\\":\\\"JWT\\\"}\"; // header for the JWT\n",
+    "        String payload = \"{\\\"sub\\\":\\\"\" + subject + \"\\\",\\\"iat\\\":\" + System.currentTimeMillis() / 1000 + // payload for the JWT\n",
     "                \",\\\"exp\\\":\" + expirationTimeMillis / 1000 + \"}\";\n",
     "\n",
-    "        String encodedHeader = base64UrlEncode(header);\n",
+    "        String encodedHeader = base64UrlEncode(header); // converting the header and payload into base64\n",
     "        String encodedPayload = base64UrlEncode(payload);\n",
     "\n",
     "        String dataToSign = encodedHeader + \".\" + encodedPayload;\n",
-    "        String signature = signData(dataToSign, secretKey);\n",
+    "        String signature = signData(dataToSign, secretKey); // Generating the JWT signature\n",
     "\n",
     "        return dataToSign + \".\" + signature;\n",
     "    }\n",
@@ -402,8 +402,7 @@
     "        return Base64.getUrlEncoder().encodeToString(input.getBytes(StandardCharsets.UTF_8));\n",
     "    }\n",
     "\n",
-    "    private static String signData(String data, String secretKey) {\n",
-    "        try {\n",
+    "    private static String signData(String data, String secretKey) { // Algorithm \n",
     "            Mac sha256Hmac = Mac.getInstance(\"HmacSHA256\");\n",
     "            SecretKeySpec secretKeySpec = new SecretKeySpec(secretKey.getBytes(StandardCharsets.UTF_8), \"HmacSHA256\");\n",
     "            sha256Hmac.init(secretKeySpec);\n",
@@ -659,21 +658,21 @@
     "2. MC Knowledge test (5) \n",
     "    - Which part of the JWT contains the actual data (claims)? \n",
     "        - Header\n",
-    "        - Payload\n",
+    "        - **Payload**\n",
     "        - Signature\n",
     "        - Encryption\n",
     "    - What is the purpose of the header in a JWT?\n",
     "        - It contains the signature for the JWT.\n",
-    "        - It identifies the algorithm used to generate the signature. \n",
+    "        - **It identifies the algorithm used to generate the signature.**\n",
     "        - It holds the encrypted data. \n",
     "        - It contains the user's information.\n",
     "    - How are the parts of a JWT (header, payload, and signature) separated?\n",
     "        - Comma\n",
-    "        - Period\n",
+    "        - **Period**\n",
     "        - Colon\n",
     "        - Semicolon\n",
     "    - Which algorithm is commonly used for JWT signatures?\n",
-    "        - HMAC (Hash-based Message Authentication Code)\n",
+    "        - **HMAC (Hash-based Message Authentication Code)**\n",
     "        - RSA (Rivest-Shamir-Adleman)\n",
     "        - AES (Advanced Encryption Standard)\n",
     "        - MD5 (Message Digest Algorithm 5)\n",
@@ -681,9 +680,10 @@
     "        - Only via HTTP headers\n",
     "        - Only as query parameters in the URL\n",
     "        - In the request body as JSON\n",
-    "        - Any of the above, depending on the application\n",
+    "        - **Any of the above, depending on the application**\n",
     "\n",
     "3. Popcorn Hacks\n",
+    " - need diagram \n",
     "\n",
     "Due: Tuesday morning after break"
    ]
