--- a/_notebooks/2023-12-19-JWTLesson.ipynb
+++ b/_notebooks/2023-12-19-JWTLesson.ipynb
@@ -461,7 +461,9 @@
     "- store the user in the memory of the server, send a corresponding ID with a cookie back to the client\n",
     "- Now every time the user sends a request, the cookie with that corresponding ID gets send to the server which verifies the ID and sends back a response.\n",
     "\n",
-    "Popcorn Hack: Create your own diagram to help visualize the JWT process"
+    "Popcorn Hack: Create your own diagram to help visualize the JWT process\n",
+    "\n",
+    "![1](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/jwtdiagram.png)"
    ]
   },
   {
@@ -655,6 +657,10 @@
     "1. Implementation \n",
     "- Implement a simple authentication system using JWT with Java. Show how JWT works with postman. Get the request to be authorized\n",
     "\n",
+    "![1](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/jwthacksdb.png)\n",
+    "\n",
+    "![2](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/jwthacks.jpg)\n",
+    "\n",
     "2. MC Knowledge test (5) \n",
     "    - Which part of the JWT contains the actual data (claims)? \n",
     "        - Header\n",
@@ -683,7 +689,6 @@
     "        - **Any of the above, depending on the application**\n",
     "\n",
     "3. Popcorn Hacks\n",
-    " - need diagram \n",
     "\n",
     "Due: Tuesday morning after break"
    ]
