--- a/_notebooks/2023-12-14-HashmapsLesson.ipynb
+++ b/_notebooks/2023-12-14-HashmapsLesson.ipynb
@@ -11,7 +11,7 @@
     "layout: post\n",
     "title: HashMaps, HashSets, Collections, SQL Student Lessons \n",
     "description: by Tirth T, Haseeb B, Sreeja G, Ekam K, Drew R, Adan R\n",
-    "courses: { csp: {week: 1} }\n",
+    "courses: { csa: {week: 13} }\n",
     "type: hacks\n",
     "---"
    ]
