--- a/_notebooks/2023-12-19-JWTLesson.ipynb
+++ b/_notebooks/2023-12-19-JWTLesson.ipynb
@@ -10,7 +10,7 @@
     "layout: post\n",
     "title: JWT - Java, Security Lesson\n",
     "description: Emma, Vivian, Grace, Aliya, Kevin, Isabelle\n",
-    "courses: { csp: {week: 1} }\n",
+    "courses: { csa: {week: 14} }\n",
     "type: hacks\n",
     "---"
    ]
