--- a/_notebooks/2023-12-20-CORSteaching.ipynb
+++ b/_notebooks/2023-12-20-CORSteaching.ipynb
@@ -10,6 +10,7 @@
     "layout: post\n",
     "title: CORS Teaching\n",
     "description: Jisbnu's part of teaching\n",
+    "courses: {csa: {week: 14} }\n",
     "---"
    ]
   },
