--- a/_notebooks/2023-12-22-MCBlog.ipynb
+++ b/_notebooks/2023-12-22-MCBlog.ipynb
@@ -10,6 +10,7 @@
     "layout: post\n",
     "title: 2015 MCQ Blog\n",
     "description: My attempt at the 2015 Collegeboard MC Questions\n",
+    "courses: {csa: {week: 15} }\n",
     "---"
    ]
   },
