commits for make

--- a/_notebooks/2024-01-25-Deployment-lesson.ipynb
+++ b/_notebooks/2024-01-25-Deployment-lesson.ipynb
@@ -310,14 +310,14 @@
     "server {\n",
     "    listen 80;\n",
     "     listen [::]:80;\n",
-    "     server_name -----.example.nighthawkcodingsociety.com ; # change server name to your domain\n",
+    "     server_name -----stu.example.nighthawkcodingsociety.com ; # change server name to your domain\n",
     "     location / {\n",
     "         proxy_pass http://localhost:8000; # change port to yours\n",
     "         if ($request_method ~* \"(GET|POST|PUT|DELETE)\") {\n",
     "                 add_header \"Access-Control-Allow-Origin\"  *;\n",
     "         }\n",
     "         if ($request_method = OPTIONS ) {\n",
-    "                 add_header \"Access-Control-Allow-Origin\"  *;\n",
+    "                 add_header \"Access-Control-Allow-Origin\"  *; # add specific github page\n",
     "                 add_header \"Access-Control-Allow-Methods\" \"GET, POST, PUT, DELETE, OPTIONS, HEAD\"; # request methods above match here\n",
     "                 add_header \"Access-Control-Allow-Headers\" \"Authorization, Origin, X-Requested-With, Content-Type, Accept\";\n",
     "                 return 200;\n",
@@ -331,6 +331,7 @@
    "metadata": {},
    "source": [
     "3. **Validation and Restart:**\n",
+    "   - Symbolic link needed  \n",
     "   - Validate with `sudo nginx -t`\n",
     "   - Restart NGINX: `sudo systemctl restart nginx`\n",
     "   - Test your domain on your desktop browser (http://)\n",
